--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -61,7 +61,6 @@
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
   loop:
-    - { dest: "/etc/cron.hourly" }
     - { dest: "/etc/gitlab-runner" }
     - { dest: "/etc/systemd/system" }
     - { dest: "/opt/gitlab-runner/executors/vagrant" }
@@ -75,7 +74,6 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
   loop:
-    - { dest: "/etc/cron.hourly/gitlab-runner", mode: "0755" }
     - { dest: "/etc/gitlab-runner/config.toml" }
     - { dest: "/etc/systemd/system/gitlab-runner.service" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/cleanup.sh", mode: "0755" }
@@ -94,7 +92,6 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   loop:
-    - { dest: "/etc/cron.hourly/gitlab-runner", mode: "0755" }
     - { dest: "/etc/gitlab-runner/config.toml" }
     - { dest: "/etc/systemd/system/gitlab-runner.service" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/cleanup.sh", mode: "0755" }
@@ -104,6 +101,39 @@
   notify:
     - gitlab_runner | systemctl daemon-reload
     - gitlab_runner | systemctl restart gitlab-runner.service
+
+- name: prepare directories
+  ansible.builtin.file:
+    dest: "{{ item.dest }}"
+    owner: "{{ item.owner | default('root') }}"
+    group: "{{ item.group | default('root') }}"
+    mode: "{{ item.mode | default('0755') }}"
+    state: "{{ item.state | default('directory') }}"
+  loop:
+    - { dest: "/etc/cron.hourly" }
+  when: inventory_hostname == ansible_play_hosts[0]
+
+- name: copy templates
+  ansible.builtin.template:
+    dest: "{{ item.dest }}"
+    src: "{{ item.src | default('./templates' + item.dest + '.j2') }}"
+    owner: "{{ item.owner | default('root') }}"
+    group: "{{ item.group | default('root') }}"
+    mode: "{{ item.mode | default('0644') }}"
+  loop:
+    - { dest: "/etc/cron.hourly/gitlab-runner", mode: "0755" }
+  when: inventory_hostname == ansible_play_hosts[0]
+
+- name: prepare files
+  ansible.builtin.file:
+    dest: "{{ item.dest }}"
+    owner: "{{ item.owner | default('root') }}"
+    group: "{{ item.group | default('root') }}"
+    mode: "{{ item.mode | default('0644') }}"
+    state: "{{ item.state | default('file') }}"
+  loop:
+    - { dest: "/etc/cron.hourly/gitlab-runner", mode: "0755" }
+  when: inventory_hostname == ansible_play_hosts[0]
 
 - name: flush handlers
   ansible.builtin.meta: flush_handlers
