--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -45,13 +45,13 @@ gitlab_runner_runners_builds_dir: "/home/vagrant"
 gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
 
 # Use this image to run builds.
-gitlab_runner_runners_vagrant_image: "alvistack/gitlab-runner-{{ gitlab_runner_release }}"
+gitlab_runner_runners_vagrant_image: "alvistack/devel-22.04"
 
 # If true, the image will be pulled on every up and reload.
 gitlab_runner_runners_vagrant_pull: false
 
 # Use this box to run builds.
-gitlab_runner_runners_vagrant_box: "alvistack/gitlab-runner-{{ gitlab_runner_release }}"
+gitlab_runner_runners_vagrant_box: "alvistack/devel-22.04"
 
 # If true, Vagrant will check for updates to the configured box on every
 # vagrant up.
