--- a/vars/ubuntu-22.04.yml
+++ b/vars/ubuntu-22.04.yml
@@ -26,7 +26,7 @@ _apt_key:
 
 _apt_repository:
   - filename: "gitlab-runner"
-    repo: "deb http://packages.gitlab.com/runner/gitlab-runner/ubuntu focal main"
+    repo: "deb http://packages.gitlab.com/runner/gitlab-runner/ubuntu jammy main"
     state: "present"
   - filename: "home:alvistack"
     repo: "deb http://downloadcontent.opensuse.org/repositories/home:/alvistack/xUbuntu_22.04/ /"
