--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -26,7 +26,7 @@ _apt_key:
 
 _apt_repository:
   - filename: "gitlab-runner"
-    repo: "deb http://packages.gitlab.com/runner/gitlab-runner/debian bullseye main"
+    repo: "deb http://packages.gitlab.com/runner/gitlab-runner/debian trixie main"
     state: "present"
   - filename: "home:alvistack"
     repo: "deb http://downloadcontent.opensuse.org/repositories/home:/alvistack/Debian_Testing/ /"
